@@ -17,6 +17,7 @@
     udevil iso unmount device handler new whitelist/blacklist #606
     fix broken key shortcuts in Open|In Panel menu #610
     add lxqt-sudo and lxsu to list of su frontends #617
+    add support for qterminal in list of terminals
 1.0.4   2015-10-17:
     new spacefm-installer replaces self-extrct and install #571
     README rewritten and manual updated for new installer #571
